--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ reqwest = "*"
 select = "*"
 scraper = "*"
 prettytable-rs = "*"
+openssl-sys = "0.9.39"
+openssl="0.10"
+feed-rs="0.1.3"
+atom_syndication="*"
