update package versions

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -29,6 +29,14 @@
                 "$rustc"
             ],
             "group": "build"
+        },
+        {
+            "type": "cargo",
+            "subcommand": "build",
+            "problemMatcher": [
+                "$rustc"
+            ],
+            "group": "build"
         }
     ]
 }
