--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ openssl-sys = "0.9.39"
 openssl="0.10"
 feed-rs="0.1.3"
 atom_syndication="*"
-tempfile="*"
+tempfile="3.0.1"
 num_cpus="*"
 scoped_threadpool="*"
 cssparser="0.27"
